disable fsmonitor in gitconfig
On Linux, this configuration causes git to not detect changes in any files in
any repository. It's strange because the description of this settings makes it
seem like it shouldn't have any effect on Linux.

--- a/.gitconfig
+++ b/.gitconfig
@@ -19,7 +19,8 @@
 	longpaths = true
 	editor = vim
   pager = delta
-	fsmonitor = true
+  # fsmonitor gives me grief on Linux
+	# fsmonitor = true
 
 [advice]
 	detachedHead = false
