--- a/.inputrc
+++ b/.inputrc
@@ -4,3 +4,5 @@ set show-mode-in-prompt on
 # set vi-cmd-mode-string \1\e[33;1m\2(N)\1\e[1 q\2\1\e[0m\2
 set vi-cmd-mode-string "\1\e[4 q\2"
 set vi-ins-mode-string "\1\e[6 q\2"
+
+set completion-ignore-case on
